--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="username">Имя пользователя</string>
     <string name="password">Пароль</string>
     <string name="log_in">Войти</string>
+    <string name="all_tasks">Все задачи:</string>
 </resources>
